// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot with nothing in cart 1`] = `
<DocumentFragment>
  <div
    class="border-t border-border p-3.75 text-center leading-normal lg:border-t-0 lg:border-l"
  >
    <h2>
      Cart
    </h2>
    <ul />
    <p
      class="my-3.75"
    >
      Total: $0.00
    </p>
    <button
      class="btn"
    >
      Checkout
    </button>
  </div>
</DocumentFragment>
`;

exports[`snapshot with some stuff in cart 1`] = `
<DocumentFragment>
  <div
    class="border-t border-border p-3.75 text-center leading-normal lg:border-t-0 lg:border-l"
  >
    <h2>
      Cart
    </h2>
    <ul>
      <li>
        <span
          class="size"
        >
          M
        </span>
         –
        <span
          class="type"
        >
          The Pepperoni Pizza
        </span>
         –
        <span
          class="price"
        >
          $12.50
        </span>
      </li>
      <li>
        <span
          class="size"
        >
          L
        </span>
         –
        <span
          class="type"
        >
          The Chicken Pesto Pizza
        </span>
         –
        <span
          class="price"
        >
          $20.75
        </span>
      </li>
      <li>
        <span
          class="size"
        >
          S
        </span>
         –
        <span
          class="type"
        >
          The Barbecue Chicken Pizza
        </span>
         –
        <span
          class="price"
        >
          $12.75
        </span>
      </li>
    </ul>
    <p
      class="my-3.75"
    >
      Total: $46.00
    </p>
    <button
      class="btn"
    >
      Checkout
    </button>
  </div>
</DocumentFragment>
`;
